refactor(project): alinear estructura activa con la versión aceptada
Reubica recursos JavaFX, suma servicios/controladores faltantes y ajusta DTOs, JPA y pruebas al paquete raíz del proyecto.

También actualiza la configuración de persistencia e IDE para trabajar con primerBimestrePU.